# CmakeLearning

./: README.md
t1/: CMakeLists.txt  main.cpp
t2/: CMakeLists.txt
t2/src/: main.cpp
t2_1/: CMakeLists.txt
t2_2/: CMakeLists.txt
t2_2/doc/: hello.txt
t3/lib/: CMakeLists.txt  hello.cpp  hello.cpp~  hello.h
t4/: CMakeLists.txt
t4/src/: CMakeLists.txt
t5/: CMakeLists.txt
t5/src/: CMakeLists.txt  main.cpp
t6/: CMakeLists.txt
t6/cmake/: FindHELLO.cmake
t6/src/: CMakeLists.txt  main.cpp
