PROJECT(HELLO)
MESSAGE(STATUS "This is Binary dir" ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "This is Source dir" ${PROJECT_SOURCE_DIR})
INSTALL(FILES COPYRIGHT README DESTINATION share/doc/cmake/t2)#文件安装
INSTALL(PROGRAMS runhello.sh DESTINATION bin)#脚本安装
INSTALL(DIRECTORY doc/ DESTINATION share/doc/cmake/t2)#目录安装
#INSTALL(TARGETS hello RUNTIME DESTINATION bin)#安装可执行文件
#set(EXECUTABLE_OUTPUT_PATH .)
ADD_SUBDIRECTORY(src bin)
